app/client/style.css
/* Use Open Sans as the default sans serif font. */
@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700|Source+Code+Pro:300,400,500,700");

/* Set up some CSS variables to theme the application. */
:root {
  --matr-navbar-bg: #ECECEC;
  --matr-navbar-bg-rgb: 236, 236, 236;
}

/* Change bootstrap variable values.
 See https://getbootstrap.com/docs/5.2/customize/css-variables/
 */
body {
  --bs-light-rgb: var(--matr-navbar-bg-rgb);
  --bs-heading-color: white;
  --bs-body-bg: #b7b9d2;
}

#landing-page {
  padding: 40px 0 40px 0;
  width: 60vw;
  margin: auto;
}

/* Set the alert background on the signin and signup pages. */
#signin-page .alert-light, #signup-page .alert-light {
  --bs-alert-bg: var(--matr-navbar-bg);
}

/* Define custom styles */
.gray-background {
  background-color: var(--matr-navbar-bg);
  color: var(--bs-dark);
  padding-top: 10px;
  padding-bottom: 20px;
}

/*Base CSS*/

p {
  color: white;
}

/*Navbar*/

#navbar {
  background-color: #686969;
}

#navbar .nav-link {
  color: white;
}

#navbar .nav-link:hover {
  color: cornflowerblue;
  transition-duration: 300ms;
}

#navbar .dropdown-item {
  color: white;
}

#navbar .dropdown-menu {
  background-color: #686969;
}

#navbar .dropdown-item:hover {
  background-color: cornflowerblue;
  transition-duration: 300ms;
}

/*End Navbar*/

/*Footer*/

footer {
  color: white;
  background-color: #686969;
}

footer a {
  color: white;
  text-decoration: none;
}

footer a:hover {
  color: cornflowerblue;
  transition-duration: 300ms;
}

footer #copyright {
  color: #a1abab;
}

/*End Footer*/

/*End Base CSS*/

@media (min-width: 1000px) {

  /*Laptop/desktop CSS*/

  /*Navbar*/

  #navbar {
    width: 80vw;
    margin-top: 20px;
    margin-left: auto;
    margin-right: auto;
    border-radius: 20px;
  }

  #navbar .app-logo {
    width: 25vw;
  }

  #navbar .company-logo {
    width: 25vw;
  }

  /*End Navbar*/

  /*Footer*/

  footer {
    width: 80vw;
    margin-left: auto;
    margin-right: auto;
    border-radius: 20px;
  }

  footer .app-logo {
    width: 15vw;
  }

  footer #copyright {
    font-size: 10px;
  }

  /*End Footer*/

}

@media (min-width: 320px) and (max-width: 999px) {

 /*Mobile and tablet CSS*/

  /*Navbar*/

  #navbar .app-logo {
    width: 50vw;
  }

  #navbar .company-logo {
    width: 50vw;
  }

  /*Navbar End*/

  /*Footer*/

  footer .app-logo {
    width: 50vw;
  }

  footer #copyright {
    font-size: 12px;
  }

  footer a {
    color: cornflowerblue;
    text-decoration: underline;
  }

  /*Footer end*/

}

.vertical-line {
  border-right: 1px solid #9798AD;
  padding-right: 15px;
}

